Version 2.4.4
--------------------------------------------------------------------
24 September 2007
+ Added check all buttons to permissions form.
+ Changed bad key error in the popup permission menu.
+ Updated: conf/error.php, templates/forms/permissions.tpl
+ Copy directory: javascript/check_all/

21 September 2007
+ Removed the line item formatting for the permission radio buttons.
+ Updated: templates/forms/permission_pop.tpl

20 September 2007
+ Session timeout on permission popup refreshes parent to login
  screen. 

19 September 2007
+ Increase popup permission height.
+ A group can no longer be a member of itself.
+ Group file tidied. allow parameter renamed module for clarity.
+ giveItemPermission now checks each group for edit permission before
  giving them item rights.

Version 2.4.3
--------------------------------------------------------------------
+ Applied patch for item #1795677. Uses user status not logged status
for the User->allow function. Thanks Eloi.

Version 2.4.2
------------------------------------------------------------------
30 August 2007
+ Added parameter to disallow which determines whether to check login.

27 August 2007
+ Changed default disallow action on anonymous users. Now forwards
  them to the login screen.

22 August 2007
+ HOME tag no longer sent to template if logging in
+ Moved box around Default user menu for easier styling.
+ Updated: templates/usermenus/Default.tpl

Version 2.4.1 -- 25 July 2007
------------------------------------------------------------------
30 July 2007
+ Fixed default authorization not getting saved.
+ Fixed default authorization was not working for new users.

23 July 2007
+ default item id on permission check functions is now zero instead of
  null. This will make checking permissions a little easier on new items.

19 July 2007
+ Bug #1690657 - Changed group select js property to onclick instead
  of onchange. Thanks singletrack.

29 May 2007
+ Changed the language abbreviation for Danish