@@ -135,7 +135,7 @@ $languages['tw_TW'] = 'Twi';
 $languages['uk_UK'] = 'Ukrainian';
 $languages['ur_UR'] = 'Urdu';
 $languages['uz_UZ'] = 'Uzbek';
-$languages['vi_VI'] = 'Vietnamese';
+$languages['vi_VN'] = 'Vietnamese';
 $languages['vo_VO'] = 'Volapuk';
 $languages['wo_WO'] = 'Wolof';
 $languages['xh_XH'] = 'Xhosa';
